trait Observer {

  def notification(subject : Participant): Unit

}
